--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="multiplicacao" onclick="multiplicar()">*</button>
         <button id="divisao" onclick="dividir()">/</button>
         <button id="potencia" onclick="potencia()">^</button>
+        <button id="resto" onclick="resto()">%</button>
       </div>
       <p id="resultado">Resultado:</p>
     </div>
